# OpenGL-OpenCV

./: Changelog.md  Changelog.txt  LICENSE.txt
BasicSample/: CMakeLists.txt  TestMain.cpp
CVGL-test/: CMakeLists.txt  cvgl.cpp  cvhelper.hpp
GL-Squares/: CMakeLists.txt  cvgl.cpp  cvhelper.hpp  object.simple.sobj  object.sobj  objhelper.hpp  shaders.h  sobjhelper.hpp  verts.hpp
OpenCV-test/: CMakeLists.txt
sobj/: CMakeLists.txt  obj_to_sobj.cpp  verts.hpp
squares/: CMakeLists.txt  squares.cpp
